terraform/modules/permissive-nsg/nsg.tf
resource "azurerm_network_security_group" "nsg" {
  name                = "${var.resource_name}-${var.resource_suffix}"
  location            = var.location
  resource_group_name = var.resource_group

  security_rule {
    name                       = "SSH-inbound"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "HTTP-inbound"
    priority                   = 1002
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "8080"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

}
